<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.orbital.snus.opening.OpeningFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/SNUS_logo_S1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SNUS_logo_S"

                android:textColor="@color/color_S"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/SNUS_logo_NUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SNUS_logo_NUS"
                android:textColor="@color/color_NUS"
                android:textSize="100sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/blue_button"
            android:text="@string/sing_up"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_login"
            app:layout_constraintEnd_toStartOf="@+id/button_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="308dp"
            android:background="@drawable/blue_button"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>